tests/extensions/forLoops/valid/forFalseCond.wacc
# Prints what is below the for loop as it does not get it.

# Output:
# I am here.

begin
	for (int i = 0; i != 0; i = i + 1) do
		skip
	done ;
	println "I am here."
end