tests/extensions/forLoops/syntaxErr/forMissingLParen.wacc
# for missing opening (

# Output:
# syntax_error

# Exit:
# 100

begin
  for int i = 0; i < 5; i++) do
    skip
end